# pet_grooming_mcp

./: .env.example  LICENSE  README.md  mcp_server.py  pyproject.toml
sql/: schema.sql
src/pet_grooming_mcp/: __init__.py  __main__.py  config.py  database.py  server.py
src/pet_grooming_mcp/models/: __init__.py  responses.py
src/pet_grooming_mcp/tools/: __init__.py  appointments.py  overview.py  payments.py  pets.py  services.py  users.py
src/pet_grooming_mcp/web/: __init__.py  analyze.py  app.py  data_quality.py  sql_runner.py
tests/: conftest.py  test_appointments.py  test_overview.py  test_services.py
