[project]
name = "pet-grooming-analytics-mcp"
version = "0.1.0"
description = "Read-only MCP server exposing secure analytics tools over a Supabase pet-grooming database."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Bert305" }]
keywords = ["mcp", "supabase", "postgres", "analytics", "pet-grooming", "claude"]

dependencies = [
    "mcp>=1.2.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
pet-grooming-mcp = "pet_grooming_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pet_grooming_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
